# reaction-data-consistency-thesis

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
data/: davidson_2005.csv  davidson_2005.json  davidson_2005_multiple_exp_old.json  nadia_exp.csv  nadia_exp.json  shen_2009.csv  shen_2009.json  template.json
src/: UncertaintyQuantification.cpp  nonlinear_least_squares.cpp  uncertainty_plot.py
surrogate/: impact_factors.py  read_data.py
uncertainty/: uncertain.cpp
